# e-Boekhouden-MCP

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: development.md  integrations.md  security.md  tools.md
eboekhouden/: __init__.py  client.py  config.py  exceptions.py  filters.py
eboekhouden/models/: __init__.py  administration.py  base.py  cost_center.py  email_template.py  enums.py  invoice.py  invoice_template.py  ledger.py  member.py  mutation.py  product.py  relation.py  session.py  unit.py
eboekhouden/services/: __init__.py  administration.py  base.py  cost_center.py  email_template.py  invoice.py  invoice_template.py  ledger.py  member.py  mutation.py  product.py  relation.py  unit.py
eboekhouden_mcp/: __init__.py  config.py  server.py
eboekhouden_mcp/tools/: __init__.py  administration.py  archive.py  base.py  cost_centers.py  invoices.py  ledgers.py  members.py  mutations.py  products.py  relations.py  templates.py  units.py
eboekhouden_mcp/tools/power/: README.md  __init__.py  _helpers.py  batch.py  reports.py  search.py
tests/: __init__.py  test_archive_tool.py  test_client.py  test_mutation_tools.py  test_power_batch.py  test_power_helpers.py  test_power_registration.py  test_power_reports.py  test_power_search.py  test_server.py  test_tools.py
