[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eboekhouden-mcp"
version = "0.1.0"
description = "MCP server for the e-Boekhouden Dutch accounting API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "eboekhouden-ai" }
]
keywords = ["e-boekhouden", "mcp", "accounting", "api", "dutch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "eboekhouden>=0.1.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
eboekhouden-mcp = "eboekhouden_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["eboekhouden_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
