[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eboekhouden-mcp"
version = "0.2.0"
description = "Secure, standalone MCP server for the e-Boekhouden accounting API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "eboekhouden-ai" }
]
keywords = ["e-boekhouden", "mcp", "accounting", "api", "dutch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "httpx>=0.27.0,<1",
    "mcp>=1.12.0,<2",
    "pydantic>=2.7.0,<3",
    "pydantic-settings>=2.2.0,<3",
    "python-dotenv>=1.0.0,<2",
    "typing-extensions>=4.9.0",
]

[project.urls]
Homepage = "https://github.com/matisup10/e-Boekhouden-MCP"
Repository = "https://github.com/matisup10/e-Boekhouden-MCP"
Issues = "https://github.com/matisup10/e-Boekhouden-MCP/issues"

[project.optional-dependencies]
dev = [
    "bandit>=1.8.0",
    "build>=1.2.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.0",
    "twine>=5.0.0",
]

[project.scripts]
eboekhouden-mcp = "eboekhouden_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["eboekhouden_mcp", "eboekhouden"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["eboekhouden", "eboekhouden_mcp"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["eboekhouden_mcp.server", "eboekhouden_mcp.tools.*"]
disable_error_code = ["call-arg"]

[tool.ruff]
target-version = "py310"
